# django-react-tailwind-vite

./: .gitignore  README.md  __init__.py  pyproject.toml  set_up_frontend.py
constants/: names.py
content/: __init__.py  environments.py  html.py  package_json.py  src_dir.py  urls.py  vite_config.py  webpack_common.py  webpack_dev.py  webpack_prod.py
content/dwango/: settings.py
src/django_react_tailwind_vite/content/: __init__.py
src/django_react_tailwind_vite/content/dwango/: settings.py
utils/: __init__.py  setup_django_dir.py  setup_root_dir.py
